--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -284,6 +284,12 @@ div {
         text-align: justify;
         text-justify: distribute;
         word-break: normal;
+        h2, h3, h4 {
+            // 保证滑动时顶部有一个 title
+            position: sticky;
+            top: 0;
+            background-color: white;
+        }
         h2 {
             margin: 1.4em 0 1.1em;
             border-bottom: 1px solid #eee;
