增加 《怎么让 favicon 动起来》，并且让博客的 favicon 动起来

--- a/themes/maupassant/layout/base.pug
+++ b/themes/maupassant/layout/base.pug
@@ -45,3 +45,4 @@ html(lang=config.language)
     if theme.totop == true
       include _partial/totop.pug
     include _partial/after_footer.pug
+    script(type='text/javascript',src='/js/gifFavIcon.js')
