--- a/themes/maupassant/layout/base.pug
+++ b/themes/maupassant/layout/base.pug
@@ -45,4 +45,4 @@ html(lang=config.language)
     if theme.totop == true
       include _partial/totop.pug
     include _partial/after_footer.pug
-    script(type='text/javascript',src='/js/gifFavIcon.js')
+    script(type='text/javascript', src=url_for(theme.js) + '/gifFavIcon.js')
