--- a/themes/maupassant/layout/_partial/after_footer.pug
+++ b/themes/maupassant/layout/_partial/after_footer.pug
@@ -32,9 +32,9 @@ if theme.canvas_nest.enable == true
 if theme.love == true
     script(type='text/javascript',src='/js/love.js')
 
-if theme.copycode == true
-    script(type='text/javascript',src='/js/copycode.js',successtext=__('copy_success_text'))
-    link(rel='stylesheet', type='text/css', href='/css/copycode.css')
+//- if theme.copycode == true
+//-     script(type='text/javascript',src='/js/copycode.js',successtext=__('copy_success_text'))
+//-     link(rel='stylesheet', type='text/css', href='/css/copycode.css')
 
 if theme.external_css == true
     link(rel='stylesheet', type='text/css', href='/css/external.css')
