接入 giscus GitHub discussion 评论系统

--- a/themes/maupassant/layout/post.pug
+++ b/themes/maupassant/layout/post.pug
@@ -56,3 +56,20 @@ block content
 
     if page.comments
       include _partial/comments.pug
+
+    .giscus
+
+    script(src="https://giscus.app/client.js"
+        data-repo="imbant/blog"
+        data-repo-id="MDEwOlJlcG9zaXRvcnkyNDkzOTc0NDM="
+        data-category="General"
+        data-category-id="DIC_kwDODt2Aw84Ch79K"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async)
