--- a/themes/maupassant/layout/_partial/head.pug
+++ b/themes/maupassant/layout/_partial/head.pug
@@ -25,14 +25,14 @@ head
     if config.feed
       link(rel='alternate', type=feed_type, href=url_for(config.feed.path))
     //- <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZM9NGRYKWS"></script>
-    <script>
+    script(async src="https://www.googletagmanager.com/gtag/js?id=G-ZM9NGRYKWS")
+    script.
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-ZM9NGRYKWS');
-    </script>
+
     //- if theme.google_analytics
     //-   script.
     //-     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
