--- a/themes/maupassant/layout/index.pug
+++ b/themes/maupassant/layout/index.pug
@@ -11,21 +11,24 @@ block content
   p Hi 👋，欢迎访问我的博客
   p 我是一名前端开发者，VS Code 插件和语言服务器开发者
   p 我目前正在构建基于 LSP 的 
-    a(href='https://marketplace.visualstudio.com/items?itemName=craftLandstudio.ffugclanguage') 语言服务器
-    | ，也在维护用 Go 构建的编译器。
+    a.post.post-content(href='https://marketplace.visualstudio.com/items?itemName=craftLandstudio.ffugclanguage') 语言服务器
+    | ，也在维护用 Go 构建的编译器
   p 在
-    a(href='/about/') 这里
+    a.post.post-content(href='/blog/about/') 这里
     | 查看更多关于我的信息
-  br
   p 我希望通过这个博客记录技术知识，提升影响力。如果你感兴趣，可以看看这些文章：
-  ul 
-    li
-      a(href='/2024/10/29/VS-Code-Thankyou/') 我为 VS Code 贡献了代码
-    li
-      a(href='2024/08/24/LSP1/') LSP 与 VS Code 插件开发 第一章
-    li
-      a(href='2023/03/30/怎么让-favicon-动起来/') 怎么让 favicon 动起来
-
+  p
+    p
+      a(href='/blog/2024/10/29/VS-Code-Thankyou/') 我为 VS Code 贡献了代码
+      p 这篇文章登上了阮一峰的
+        a(href='https://www.ruanyifeng.com/blog/2024/11/weekly-issue-324.html') 科技爱好者周刊
+    p 
+      a(href='/blog/2024/08/24/LSP1/') LSP 与 VS Code 插件开发 第一章
+      p 记录我对 LSP 和语言服务器开发系列文章
+    p
+      a(href='/blog/2023/03/30/怎么让-favicon-动起来/') 怎么让 favicon 动起来
+      p 发现了吗，本网站的 favicon 会动
+  br
   hr
 
   for post in page.posts.toArray()
