--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -1945,3 +1945,8 @@ em.search-keyword {
   --waline-avatar-radius: 50%;
   --waline-box-shadow: none;
 }
+
+.common-link {
+    color: #01579f;
+    padding-bottom: 2px;
+}
