排版与样式

--- a/themes/maupassant/layout/index.pug
+++ b/themes/maupassant/layout/index.pug
@@ -17,14 +17,15 @@ block content
   p 在
     a.common-link(href='/blog/about/') 这里
     | 查看更多关于我的更多信息
+  br
   p 我希望通过这个博客记录技术知识，提升影响力。如果你感兴趣，可以看看这些文章：
   p
     p
       a.common-link(href='/blog/2024/10/29/VS-Code-Thankyou/') 我为 VS Code 贡献了代码
       | ：这篇文章登上了阮一峰的
-      a(href='https://www.ruanyifeng.com/blog/2024/11/weekly-issue-324.html') 科技爱好者周刊
+      a.common-link(href='https://www.ruanyifeng.com/blog/2024/11/weekly-issue-324.html') 科技爱好者周刊
     p 
-      a(href='/blog/2024/08/24/LSP1/') LSP 与 VS Code 插件开发 第一章
+      a.common-link(href='/blog/2024/08/24/LSP1/') LSP 与 VS Code 插件开发 第一章
       | ：记录我对 LSP 和语言服务器开发系列文章
     p
       a(href='/blog/2023/03/30/怎么让-favicon-动起来/') 怎么让 favicon 动起来
