--- a/themes/maupassant/layout/index.pug
+++ b/themes/maupassant/layout/index.pug
@@ -28,7 +28,7 @@ block content
       a.common-link(href='/blog/2024/08/24/LSP1/') LSP 与 VS Code 插件开发 第一章
       | ：记录我对 LSP 和语言服务器开发系列文章
     p
-      a(href='/blog/2023/03/30/怎么让-favicon-动起来/') 怎么让 favicon 动起来
+      a.common-link(href='/blog/2023/03/30/怎么让-favicon-动起来/') 怎么让 favicon 动起来
       | ：发现了吗，本网站的 favicon 会动
   br
   hr
