--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -1659,7 +1659,7 @@ figure.highlight,
 .toc-article {
     border: 1px solid #bbb;
     border-radius: 7px;
-    margin: 1.1em 0 0 2em;
+    margin: 2em 0 0 0;
     padding: 0.7em 0.7em 0 0.7em;
     max-width: 40%;
 }
@@ -1670,7 +1670,7 @@ figure.highlight,
 
 #toc {
     line-height: 1em;
-    float: right;
+    // float: right;
     .toc {
         padding: 0;
         margin: 0.5em;
