--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -1661,7 +1661,7 @@ figure.highlight,
     border-radius: 7px;
     margin: 2em 0 0 0;
     padding: 0.7em 0.7em 0 0.7em;
-    max-width: 40%;
+    // max-width: 40%;
 }
 
 .toc-title {
