--- a/themes/maupassant/layout/_partial/head.pug
+++ b/themes/maupassant/layout/_partial/head.pug
@@ -1,12 +1,13 @@
 head
     meta(name="google-site-verification", content="_s8zp9HC5xK3I7RCh_8RJrSUgYtyNgc09bZvTV11nFI")
-    meta(http-equiv='content-type', content='text/html; charset=utf-8')
-    meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0', name='viewport')
-    meta(content='yes', name='apple-mobile-web-app-capable')
-    meta(content='black-translucent', name='apple-mobile-web-app-status-bar-style')
+    meta(charset='utf-8')
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     meta(content='telephone=no', name='format-detection')
     meta(name='description', content=config.description)
     meta(name='keywords', content=config.keywords)
+    meta(name="robots", content="index, follow")
+    meta(content='yes', name='apple-mobile-web-app-capable')
+    meta(content='black-translucent', name='apple-mobile-web-app-status-bar-style')
     block title
     link(rel='stylesheet', type='text/css', href=url_for(theme.css) + '/style.css' + '?v=' + theme.version)
     if theme.dark == true
